# rust-gib

./: Cargo.toml  HOW_TO_RUN.md  IMPLEMENTATION.md  PLAN.md  README.md  TESTING.md  code_arch.mermaid  config.yaml  log3
core/bot/: Cargo.toml
core/bot/src/: errors.rs  gitbot.rs
core/feature-types/: Cargo.toml
core/feature-types/src/: error.rs  feature.rs  lib.rs
core/githost-types/: Cargo.toml
core/githost-types/src/: error.rs  githost.rs  gittypes.rs  lib.rs
examples/: config.yaml
examples/rust-gib/: config.yaml
examples/rust-gib/issues/right/: absurd.txt  github_connection.txt  templates.txt  unexpected.txt
examples/rust-gib/issues/wrong/: absurd.txt  configuration.txt  github_connection.txt  llm_connection.txt  templates.txt  unexpected.txt
examples/rust-gib/templates/improve/: system_message.tmpl
examples/rust-gib/templates/label/: system_message.tmpl
features/improve-feature/: Cargo.toml
features/improve-feature/src/: improve_feature.rs  lib.rs
features/label-feature/: Cargo.toml
features/label-feature/src/: label_feature.rs  lib.rs
future_ideas/: PLAN.md
gib-app/: Cargo.toml
gib-bot/: Cargo.toml
gib-bot/src/: gitbot.rs  lib.rs
gib-feature-types/: Cargo.toml
gib-feature-types/src/: feature.rs
gib-githost-types/: Cargo.toml
gib-githost-types/src/: action.rs  event.rs  githost.rs  gittypes.rs  lib.rs
gib-github/: Cargo.toml
gib-github/src/: github_githost.rs
gib-improve-feature/: Cargo.toml
gib-improve-feature/src/: improve_feature.rs
gib-label-feature/: Cargo.toml
gib-label-feature/src/: label_feature.rs
gib-llm-types/: Cargo.toml
gib-llm-types/src/: messages.rs
gib-openai/: Cargo.toml
gib-openai/src/: lib.rs  openai_llm.rs
githost-github/: Cargo.toml
githost-github/src/: github_githost.rs  lib.rs
llm/llm-openai/: Cargo.toml
llm/llm-openai/src/: openai_llm.rs
llm/llm-types/: Cargo.toml
llm/llm-types/src/: error.rs  lib.rs  llm.rs
src/: cli_args.rs  config.rs  errors.rs  lib.rs  main.rs
src/bot/: bot_features.rs  errors.rs  feature_type.rs  gitbot.rs  mod.rs
src/bot/features/: improve_feature.rs  label_feature.rs  mod.rs  templates.rs
src/features/: errors.rs  feature_type.rs  improve_feature.rs  label_feature.rs  mod.rs
src/githost/: errors.rs  event.rs  events.rs  githost.rs  host.rs  mod.rs  model.rs
src/githost/impls/github/: errors.rs  github_githost.rs  github_host.rs  issue_open_test.json  issue_response.json  mod.rs  repository_response.json  test.pem  type_conversions.rs  webhook_server.rs
src/llm/: agent.rs  errors.rs  llm.rs  llm_trait.rs  messages.rs  mod.rs
src/llm/impls/: openai_llm.rs
src/utils/: clear_url.rs  display.rs  mod.rs
templates/improve/: system_message.tmpl  user_message.tmpl
templates/label/: system_message.tmpl  user_message.tmpl
