[package]
name = "gib"
version = "0.1.0"
edition = "2021"

[lib]
name = "gib"
path = "src/lib.rs"

[[bin]]
name = "gib_cli"
path = "src/main.rs"

[dependencies]
nutype = "0.4.3"
thiserror = "1.0.63"
async-openai = "0.24.0"
non-empty-string = { version = "0.2.4", features = ["serde"] }
secrecy = "0.8.0"
url = "2.5.2"
futures = "0.3.30"
nonempty = "0.10.0"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.81"
axum = "0.7.5"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
log = "0.4.22"
octocrab = { git = "https://github.com/InAnYan/octocrab", branch = "fix-for-ids" }
smart-default = "0.7.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
anyhow = "1.0.89"
