[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
feature-types = { version = "0.1.0", path = "../feature-types" }
githost-types = { version = "0.1.0", path = "../githost-types" }
non-empty-string = "0.2.4"
nonempty = "0.10.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
